examples/pos/infer/infer_hof.effekt
def hof[A] { f: A => String }: A = <>
def hof2[A] { f: A => A }: A = <>

def toString(n: Int): String = ""

// ?A == Int
def callsite1() = hof { n => n.toString }

// ?A == String
def callsite2() = hof { n => n }

// ?A == String
def callsite2() = hof2 { n => hof { n => n } }

// ?A == Unknown
// def callsite3() = hof2 { n => n }

def main() = ()