examples/neg/issue548b.effekt
def hof[A] { prog: [B](B) => A }: A = prog[String]("hello")

def main() = {
  val res = hof { [C](x: C) => x }; // ERROR escape
  println(res.genericShow)
}
